# drum

./: .gitignore  README.md
include/: drum.h
include/core/: json.h  play_wav.h  wifi.h  ws_common.h  ws_log.h
src/core/: json.cpp  play_wav.cpp  wifi.cpp  ws_common.cpp  ws_log.cpp
test/: README.md  build-alsa-test.sh
test/alsa-test/: README.md  alsa-test.cpp  alsa-test.h  build.sh
test/audio_pack-test/: CMakeLists.txt  audio_pack-test.cpp  audio_pack.h  play_wav.cpp  play_wav.h  release.sh
test/gain-test/: CMakeLists.txt  README.md  gain-test.cpp  play_wav.cpp  play_wav.h  release.sh
test/json-test/: CMakeLists.txt  README.md  json-test.cpp  release.sh
test/log-test/: CMakeLists.txt  README.md  log-test.cpp  release.sh
test/parse_wave-test/: CMakeLists.txt  parse_wave-test.1.cpp  parse_wave-test.cpp  play.cpp  release.sh
test/play_wav-test/: CMakeLists.txt  play_wav-test.cpp  release.sh
test/rhythm-test/: CMakeLists.txt  release.sh  rhythm-test.cpp  rhythm.json  rhythm_parse.cpp
test/wifi-test/: CMakeLists.txt  README.md  release.sh  tempCmd  wifi-test.cpp  wifi-test.h
